[tool.poetry]
name = "medium-python-client-certs"
version = "0.1.0"
description = ""
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
packages = [
    { include = "echo" }
]

[tool.poetry.dependencies]
python = "^3.9"
aioconsole = "^0.5.0"
hypercorn = "^0.13.2"
httpx = "^0.23.0"
bareasgi = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
